feat: change mongodb url

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_END_POINT = http://localhost:5000/api/v1
+REACT_APP_API_END_POINT = https://w53o1cz1a1.execute-api.ap-south-1.amazonaws.com/dev/api/v1
