--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.5.1",
+    "serverless-http": "^3.2.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "serverless-offline": "^13.6.0"
   }
 }
